third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/inline-table/empty-3.stderr
TOML parse error at line 1, column 6
  |
1 | t = {
  |      ^
invalid inline table
expected `}`
